spacing fix

--- a/src/app/contactUs/style.module.scss
+++ b/src/app/contactUs/style.module.scss
@@ -85,22 +85,27 @@
 
     .getInTouch {
         padding: 50px 0 50px 0;
-        @media (max-width:767px) { 
-            padding-right:10px;
-            padding-left:10px;
+
+        @media (max-width:767px) {
+            padding-right: 20px;
+            padding-left: 20px;
         }
+
         .formBody {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             margin-top: 30px;
+
             .formBox {
                 width: 45%;
                 margin-bottom: 20px;
-                @media (max-width:767px) { 
+
+                @media (max-width:767px) {
                     width: 100%;
                     margin-bottom: 0;
                 }
+
                 &.message {
                     width: 100%;
                 }
